--- a/utility.css
+++ b/utility.css
@@ -22,3 +22,24 @@ padding: 1rem;
 .height-vh-100{
     height: 100vh;
 }
+
+.wd-50{
+    width: 50%;
+}
+
+.padd-top-lg{
+    padding-top: 1.5rem;
+  }
+  .padd-btm-lg{
+    padding-bottom: 1.5rem;
+  }
+  .padd-top-sm{
+    padding-top: 0.5rem;
+  }
+  
+  .padd-md{
+  padding: 1rem;
+  }
+  .height-100{
+    height: 100%; 
+  }
