--- a/utility.css
+++ b/utility.css
@@ -1,4 +1,6 @@
-
+.d-flex{
+    display: flex;
+} 
 .flex-col{
     display: flex;
     flex-direction: column;
@@ -43,3 +45,6 @@ padding: 1rem;
   .height-100{
     height: 100%; 
   }
+  .inline-block{
+    display: inline-block;
+}
