--- a/screens/css/product-list.css
+++ b/screens/css/product-list.css
@@ -58,3 +58,13 @@
 color: var(--text-color);
     background-color: var(--bg-color);
 }
+
+.slider-range{
+    margin-left: 1.5rem;
+    margin-right: 5rem;
+}
+
+.card-icon{
+    color: var(--red-solid);
+    cursor: pointer;
+}
